--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ bindgen = "0.56"
 [target.'cfg(windows)'.build-dependencies]
 vcpkg = "0.2.8"
 
-[target.'cfg(target_os="macos")'.build-dependencies]
+[target.'cfg(not(windows))'.build-dependencies]
 pkg-config = "0.3.19"
